# invenio-charts-tugraz

./: .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_charts_tugraz/: __init__.py  ext.py  proxies.py  views.py  webpack.py
invenio_charts_tugraz/administration/: chart_views.py  rdm_charts.py
invenio_charts_tugraz/assets/semantic-ui/js/invenio_charts_tugraz/administration/: index.js  rdmRecordsCharts.js
invenio_charts_tugraz/resources/: __init__.py  config.py  resource.py
invenio_charts_tugraz/services/: __init__.py  config.py  services.py
invenio_charts_tugraz/templates/semantic-ui/invenio_charts_tugraz/: charts.html  rdm-charts.html
tests/: conftest.py  test_invenio_charts_tugraz.py
