# -*- coding: utf-8 -*-
#
# Copyright (C) 2026 Graz University of Technology
#
# Invenio-Charts-Tugraz is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.


[metadata]
name = invenio-charts-tugraz
version = attr: invenio_charts_tugraz.__version__
description = InvenioRDM module for administration charts
long_description = file: README.rst, CHANGES.rst
keywords = invenio rdm charts
license = MIT
author = Graz University of Technology
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/tu-graz-library/invenio-charts-tugraz
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-administration>=4.0.0,<5.0.0
    invenio-base>=2.3.0,<3.0.0
    invenio-i18n>=3.0.0,<4.0.0
    invenio-rdm-records>=19.0.0
[options.extras_require]
tests =
    invenio-app>=2.0.0,<3.0.0
    invenio-app-rdm>=13.0.0b4.dev1,<14.0.0
    invenio-db[postgresql,mysql]>=2.0.0,<3.0.0
    invenio-search[opensearch2]>=3.0.0,<4.0.0
    pytest-black>=0.6.0
    pytest-invenio>=3.0.0,<4.0.0
    sphinx>=4.5.0
    types-flask>=1.1.6
    ruff>=0.1.0
    mypy>=1.15.0
    types-setuptools>=78.1.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0

[options.entry_points]
invenio_base.apps =
    charts = invenio_charts_tugraz:InvenioChartsTugraz
invenio_base.api_apps =
    charts = invenio_charts_tugraz:InvenioChartsTugraz
invenio_base.blueprints =
    charts = invenio_charts_tugraz.views:blueprint
invenio_i18n.translations =
    messages = invenio_charts_tugraz
invenio_assets.webpack =
    charts = invenio_charts_tugraz.webpack:administration
invenio_administration.views =
    rdm_charts = invenio_charts_tugraz.administration.chart_views:RdmChartsView
invenio_base.api_blueprints =
    charts = invenio_charts_tugraz.views:create_rdm_charts_bp

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --doctest-glob="*.rst" --doctest-modules --cov=invenio_charts_tugraz --cov-report=term-missing
testpaths = docs tests invenio_charts_tugraz


[compile_catalog]
directory = invenio_charts_tugraz/translations/
use_fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping_file = babel.ini
output_file = invenio_charts_tugraz/translations/messages.pot
add_comments = NOTE

[init_catalog]
input_file = invenio_charts_tugraz/translations/messages.pot
output_dir = invenio_charts_tugraz/translations/

[update_catalog]
input_file = invenio_charts_tugraz/translations/messages.pot
output_dir = invenio_charts_tugraz/translations/
